# monorepo-demo

./: CHANGELOG.md  Makefile  README.md  pyproject.toml
app/: main.py
app/internal/: rmodels.py
experiments/: README.md  pyproject.toml
experiments/notebooks/: torch_exp.ipynb
workflows/: README.md
workflows/batch-proc/: README.md  pyproject.toml
workflows/batch-proc/notebooks/: infer.ipynb  train.ipynb
workflows/trainer/: pyproject.toml  train.ipynb
