[project]
name = "experiments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "data-connector",
    "fraud-ml",
    "jupyter>=1.1.1",
    "torch>=2.6.0",
]

[tool.uv.sources]
fraud-ml = { workspace = true }
data-connector = { workspace = true }
